00-busybox.yml
apiVersion: v1
kind: Pod
metadata:
  namespace: sandbox
  name: busybox
  labels:
    app: busybox
spec:
  containers:
  - name: busybox
    image: yauritux/busybox-curl
    command: ["sleep", "6000"]
    imagePullPolicy: IfNotPresent
    resources:
      requests:
        cpu: 100m
        memory: 10Mi
