01-elastic.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: es-cluster
  namespace: sandbox
spec:
  replicas: 1
  selector:
    matchLabels:
      app: elasticsearch
  template:
    metadata:
      labels:
        app: elasticsearch
    spec:
      containers:
      - name: elasticsearch
        image: docker.elastic.co/elasticsearch/elasticsearch:7.2.0
        resources:
            limits:
              cpu: 1000m
            requests:
              cpu: 100m
        ports:
        - containerPort: 9200
          name: rest
          protocol: TCP
        - containerPort: 9300
          name: inter-node
          protocol: TCP
---
kind: Service
apiVersion: v1
metadata:
  name: elasticsearch
  namespace: sandbox
  labels:
    app: elasticsearch
spec:
  selector:
    app: elasticsearch
#  clusterIP: None
  ports:
    - port: 9200
      name: rest
    - port: 9300
      name: inter-node
